# app2agent

./: .gitignore  .prettierignore  .windsurfrules  LICENSE  README.md  manifest.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: README.md  backend-tests.yml
.husky/: pre-commit
backend/: .gitignore  CLAUDE.md  README.md  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.mjs
backend/src/: middleware.ts
backend/supabase/: config.toml  seed.sql
crawler/: .gitignore  README.md  pyproject.toml
crawler/crawler/: settings.py
crawler/crawler/scripts/: linkedin.py
crawler/crawler/spiders/: webpage_spider.py
data/ezamowienia.gov.pl/: output.md
extension/: package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vite.inject.config.ts
extension/src/: index.css  multimodal-live-types.ts
extension/test/: index.html  server.js
landing-page/: README.md  package.json  pnpm-lock.yaml
landing-page/src/: middleware.ts
landing-page/supabase/: config.toml
src/: index.css
src/background/: dom-selector.ts  planner.ts  recorder-controller.ts  service-worker.ts
src/components/: call-form.tsx  loading.tsx  modal.tsx  recorder.tsx  screen-capture-form.tsx
src/contexts/: LiveAPIContext.tsx
src/hooks/: use-chrome-tab-capture.ts  use-config.ts  use-live-api.ts  use-manual-lookup.ts
src/lib/: audio-context.ts  audio-recorder.ts  audio-streamer.ts  connected-tone.ts  multimodal-live-client.ts  page-navigation.ts  (+2 more)
test-inject/: index.html  package.json  server.js
(+223 files in other folders)
